--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -62,10 +62,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\Components\Snapshot.cs" />
     <Compile Include="Assets\Scripts\Others\GameManager.cs" />
     <Compile Include="Assets\Scripts\Others\TitleScreen.cs" />
+    <Compile Include="Assets\Scripts\Systems\GenSnapshotSystem.cs" />
     <Compile Include="Assets\Scripts\Systems\InputSystem.cs" />
-    <Compile Include="Assets\Scripts\Systems\NetworkClientSystem.cs" />
     <Compile Include="Assets\Scripts\Systems\NetworkServerSystem.cs" />
     <Compile Include="Assets\Scripts\Systems\ServerSimulationSystemGroup.cs" />
     <Compile Include="Assets\Scripts\Systems\UpdateUISystem.cs" />
