简单的状态同步

--- a/FootStone.TankShared.csproj
+++ b/FootStone.TankShared.csproj
@@ -99,6 +99,23 @@
     <Compile Include="D:\work\ECS\TankDemo\Packages\com.footstone.tankshared\FootStone.TankShared\Main\GameNetworkEvents.cs" />
     <Compile Include="D:\work\ECS\TankDemo\Packages\com.footstone.tankshared\FootStone.TankShared\Main\PlayerSettings.cs" />
     <Compile Include="D:\work\ECS\TankDemo\Packages\com.footstone.tankshared\FootStone.TankShared\Main\ServerGameLoop.cs" />
+    <Compile Include="D:\work\ECS\TankDemo\Packages\com.footstone.tankshared\FootStone.TankShared\Network\Compression\HuffmanInputStream.cs" />
+    <Compile Include="D:\work\ECS\TankDemo\Packages\com.footstone.tankshared\FootStone.TankShared\Network\Compression\HuffmanOutputStream.cs" />
+    <Compile Include="D:\work\ECS\TankDemo\Packages\com.footstone.tankshared\FootStone.TankShared\Network\Compression\IInputStream.cs" />
+    <Compile Include="D:\work\ECS\TankDemo\Packages\com.footstone.tankshared\FootStone.TankShared\Network\Compression\IOutputStream.cs" />
+    <Compile Include="D:\work\ECS\TankDemo\Packages\com.footstone.tankshared\FootStone.TankShared\Network\Compression\NetworkCompressionCapture.cs" />
+    <Compile Include="D:\work\ECS\TankDemo\Packages\com.footstone.tankshared\FootStone.TankShared\Network\Compression\NetworkCompressionConstants.cs" />
+    <Compile Include="D:\work\ECS\TankDemo\Packages\com.footstone.tankshared\FootStone.TankShared\Network\Compression\NetworkCompressionModel.cs" />
+    <Compile Include="D:\work\ECS\TankDemo\Packages\com.footstone.tankshared\FootStone.TankShared\Network\Compression\NetworkCompressionUtils.cs" />
+    <Compile Include="D:\work\ECS\TankDemo\Packages\com.footstone.tankshared\FootStone.TankShared\Network\Compression\RawInputStream.cs" />
+    <Compile Include="D:\work\ECS\TankDemo\Packages\com.footstone.tankshared\FootStone.TankShared\Network\Compression\RawOutputStream.cs" />
+    <Compile Include="D:\work\ECS\TankDemo\Packages\com.footstone.tankshared\FootStone.TankShared\Network\ConversionUtility.cs" />
+    <Compile Include="D:\work\ECS\TankDemo\Packages\com.footstone.tankshared\FootStone.TankShared\Network\NetworkCommon.cs" />
+    <Compile Include="D:\work\ECS\TankDemo\Packages\com.footstone.tankshared\FootStone.TankShared\Network\NetworkReader.cs" />
+    <Compile Include="D:\work\ECS\TankDemo\Packages\com.footstone.tankshared\FootStone.TankShared\Network\NetworkSchema.cs" />
+    <Compile Include="D:\work\ECS\TankDemo\Packages\com.footstone.tankshared\FootStone.TankShared\Network\NetworkUtils.cs" />
+    <Compile Include="D:\work\ECS\TankDemo\Packages\com.footstone.tankshared\FootStone.TankShared\Network\NetworkWriter.cs" />
+    <Compile Include="D:\work\ECS\TankDemo\Packages\com.footstone.tankshared\FootStone.TankShared\Network\StringExtensionMethods.cs" />
     <Compile Include="D:\work\ECS\TankDemo\Packages\com.footstone.tankshared\FootStone.TankShared\Systems\CheckVisibleSystem.cs" />
     <Compile Include="D:\work\ECS\TankDemo\Packages\com.footstone.tankshared\FootStone.TankShared\Systems\DespawnSystem.cs" />
     <Compile Include="D:\work\ECS\TankDemo\Packages\com.footstone.tankshared\FootStone.TankShared\Systems\FireSystem.cs" />
