--- a/Assembly-CSharp-Editor.csproj
+++ b/Assembly-CSharp-Editor.csproj
@@ -357,9 +357,6 @@
     <Reference Include="System.Runtime.CompilerServices.Unsafe">
       <HintPath>D:/work/ECS/TankDemo/Server/Packages/com.footstone.kcptransport/System.Runtime.CompilerServices.Unsafe.dll</HintPath>
     </Reference>
-    <Reference Include="Unity.Networking.Transport">
-      <HintPath>D:/work/ECS/TankDemo/Server/Packages/com.footstone.kcptransport/Unity.Networking.Transport.dll</HintPath>
-    </Reference>
     <Reference Include="Unity.Burst.Unsafe">
       <HintPath>D:/work/ECS/TankDemo/Server/Library/PackageCache/com.unity.burst@1.1.2/Unity.Burst.Unsafe.dll</HintPath>
     </Reference>
@@ -737,6 +734,10 @@
     <ProjectReference Include="FootStone.KcpTransport.csproj">
       <Project>{25AC7E56-6F16-5C30-AEF1-53D657C82ECA}</Project>
       <Name>FootStone.KcpTransport</Name>
+    </ProjectReference>
+    <ProjectReference Include="Unity.Networking.Transport.csproj">
+      <Project>{4E55D8D2-1C09-4CD3-FA51-93EE51D5AD39}</Project>
+      <Name>Unity.Networking.Transport</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
