--- a/FootStone.TankShared.csproj
+++ b/FootStone.TankShared.csproj
@@ -98,6 +98,8 @@
     <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Entity\FSComponentSystem.cs" />
     <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Entity\GameTick.cs" />
     <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Entity\GameWorld.cs" />
+    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Network\BitInputStream.cs" />
+    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Network\BitOutputStream.cs" />
     <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Network\Compression\HuffmanInputStream.cs" />
     <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Network\Compression\HuffmanOutputStream.cs" />
     <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Network\Compression\IInputStream.cs" />
@@ -109,11 +111,25 @@
     <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Network\Compression\RawInputStream.cs" />
     <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Network\Compression\RawOutputStream.cs" />
     <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Network\ConversionUtility.cs" />
+    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Network\DeltaReader.cs" />
+    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Network\DeltaWriter.cs" />
+    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Network\GameNetworkEvents.cs" />
+    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Network\NetworkClient.cs" />
     <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Network\NetworkCommon.cs" />
+    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Network\NetworkConnection.cs" />
+    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Network\NetworkEvent.cs" />
+    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Network\NetworkObjectPool.cs" />
+    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Network\NetworkPrediction.cs" />
     <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Network\NetworkReader.cs" />
     <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Network\NetworkSchema.cs" />
+    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Network\NetworkServer.cs" />
     <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Network\NetworkUtils.cs" />
     <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Network\NetworkWriter.cs" />
+    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Network\SequenceBuffer.cs" />
+    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Network\Socket\SocketExtension.cs" />
+    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Network\Socket\SocketTransport.cs" />
+    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Network\Socket\UdpCSocket.cs" />
+    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Network\SparseSequenceBuffer.cs" />
     <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Network\StringExtensionMethods.cs" />
     <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Systems\ApplyPresentationSystem.cs" />
     <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Systems\DespawnSystem.cs" />
@@ -125,6 +141,8 @@
     <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Systems\MoveTranslationSystem.cs" />
     <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Systems\RayCastSystem.cs" />
     <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Systems\WorldTimeSystem.cs" />
+    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Utils\CircularList.cs" />
+    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Utils\FloatRollingAverage.cs" />
     <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Utils\SpawnEntityUtil.cs" />
     <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Utils\TickStateDenseBuffer.cs" />
     <None Include="Packages\com.footstone.tankshared\FootStone.TankShared\FootStone.TankShared.asmdef" />
