--- a/FootStone.TankShared.csproj
+++ b/FootStone.TankShared.csproj
@@ -188,6 +188,7 @@
     <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Utils\StopWatchExtensions.cs" />
     <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Utils\TickStateDenseBuffer.cs" />
     <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Utils\TickStateSparseBuffer.cs" />
+    <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Utils\TickStateSparseBufferStruct.cs" />
     <Compile Include="Packages\com.footstone.tankshared\FootStone.TankShared\Utils\WeakAssetReference\WeakAssetReference.cs" />
     <None Include="Packages\com.footstone.tankshared\FootStone.TankShared\FootStone.TankShared.asmdef" />
     <Reference Include="Unity.Collections">
